--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "gulp-istanbul": "^0.1.1",
     "gulp-istanbul-enforcer": "^1.0.2",
     "lodash": "^2.4.1",
-    "colors": "^0.6.2"
+    "gulp-help": "0.0.3"
   }
 }
