--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "load-common-gulp-tasks",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Load common gulp tasks and configs so you don't need to redefine them for every module",
   "main": "./index.js",
   "scripts": {
     "test": "gulp test"
   },
   "keywords": [
-    "gulp",
-    "shared"
+    "gulp"
   ],
   "repository": "chmontgomery/load-common-gulp-tasks",
   "author": {
