--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp-istanbul-enforcer": "^1.0.2",
     "lodash": "^2.4.1",
     "gulp-help": "0.0.7",
-    "map-stream": "^0.1.0"
+    "map-stream": "^0.1.0",
+    "gulp-size": "^0.3.0",
+    "through2": "^0.4.1"
   }
 }
