--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "load-common-gulp-tasks",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "Load common gulp tasks and configs so you don't need to redefine them for every module",
   "main": "./index.js",
   "scripts": {
@@ -32,7 +32,7 @@
     "gulp-istanbul": "^0.1.1",
     "gulp-istanbul-enforcer": "^1.0.2",
     "lodash": "^2.4.1",
-    "gulp-help": "0.0.7",
+    "gulp-help": "^0.1.0",
     "map-stream": "^0.1.0",
     "gulp-size": "^0.3.0",
     "through2": "^0.4.1"
