--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "load-common-gulp-tasks",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Load common gulp tasks and configs so you don't need to redefine them for every module",
   "main": "./index.js",
   "scripts": {
@@ -9,7 +9,10 @@
   "keywords": [
     "gulp"
   ],
-  "repository": "chmontgomery/load-common-gulp-tasks",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chmontgomery/load-common-gulp-tasks"
+  },
   "author": {
     "name": "Chris Montgomery",
     "email": "chr.montgomery@gmail.com",
@@ -20,23 +23,25 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^3.8.2",
-    "should": "^3.3.0",
-    "sinon": "^1.9.1"
+    "gulp": "3.8.5",
+    "should": "3.3.0",
+    "sinon": "1.9.1"
   },
   "dependencies": {
-    "gulp-help": "^0.1.4",
-    "gulp-istanbul": "^0.2.0",
-    "gulp-istanbul-enforcer": "^1.0.3",
-    "gulp-jshint": "^1.5.3",
-    "gulp-mocha": "^0.4.1",
-    "gulp-open": "^0.2.8",
-    "gulp-plato": "^0.2.1",
-    "gulp-size": "^0.3.1",
-    "gulp-util": "^2.2.18",
-    "jshint-stylish": "^0.1.5",
-    "lodash": "^2.4.1",
-    "map-stream": "^0.1.0",
-    "through2": "^0.4.2"
+    "gulp-help": "0.1.4",
+    "gulp-istanbul": "0.2.0",
+    "gulp-istanbul-enforcer": "1.0.3",
+    "gulp-jshint": "1.5.3",
+    "gulp-mocha": "0.4.1",
+    "gulp-nice-package": "0.0.1",
+    "gulp-open": "0.2.8",
+    "gulp-plato": "0.2.1",
+    "gulp-shrinkwrap": "0.0.2",
+    "gulp-size": "0.3.1",
+    "gulp-util": "2.2.18",
+    "jshint-stylish": "0.1.5",
+    "lodash": "2.4.1",
+    "map-stream": "0.1.0",
+    "through2": "0.4.2"
   }
 }
