--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "gulp test"
   },
   "keywords": [
-    "gulp"
+    "gulp",
+    "load",
+    "require",
+    "tasks",
+    "common"
   ],
   "repository": {
     "type": "git",
