--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "dependencies": {
     "gulp-help": "1.3.0",
-    "gulp-istanbul": "0.3.1",
+    "gulp-istanbul": "git+https://github.com/thejameskyle/gulp-istanbul.git#harmony",
     "gulp-istanbul-enforcer": "1.0.3",
     "gulp-jshint": "1.8.4",
     "gulp-mocha": "1.0.0",
